UI and code refactor

--- a/app/src/main/res/layout/fragment_credentials.xml
+++ b/app/src/main/res/layout/fragment_credentials.xml
@@ -103,11 +103,20 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:text="All your data is stored only on this device" />
+
         <ImageButton
             android:id="@+id/button_cred_next"
             android:layout_width="75dp"
             android:layout_height="50dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/button_gradient_drawable"
             android:elevation="5dp"
